fix: :lipstick: Fixed center align through `align-items`

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ ul {
     flex-shrink: 0;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
 }
 
 .hero-left {
